# popcount-benchmark

./: flake.nix  popcount-benchmark.cabal
bench/: Main.hs
cbits/: popcount.c
